--- a/trunk/ui/configDialog.ui
+++ b/trunk/ui/configDialog.ui
@@ -78,7 +78,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>1</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="Seite" >
       <layout class="QGridLayout" >
@@ -277,7 +277,7 @@
      </widget>
      <widget class="QWidget" name="page" >
       <layout class="QGridLayout" >
-       <item row="0" column="0" >
+       <item row="1" column="0" >
         <widget class="QTabWidget" name="repoTab" >
          <property name="currentIndex" >
           <number>0</number>
@@ -287,7 +287,7 @@
            <string>Arch Linux Official Repositories</string>
           </attribute>
           <layout class="QGridLayout" >
-           <item row="0" column="0" >
+           <item row="1" column="0" >
             <layout class="QVBoxLayout" >
              <item>
               <widget class="QLabel" name="officialLabel" >
@@ -347,19 +347,38 @@ Please note that packages from Unstable and Testing may break your system.</stri
              </item>
             </layout>
            </item>
-           <item row="1" column="0" >
-            <layout class="QHBoxLayout" >
-             <item>
-              <widget class="QLabel" name="mirrorLabel" >
-               <property name="text" >
-                <string>Mirror:</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QComboBox" name="mirrorBox" />
-             </item>
-            </layout>
+           <item row="2" column="0" >
+            <widget class="QGroupBox" name="groupBox_4" >
+             <property name="title" >
+              <string>GroupBox</string>
+             </property>
+             <layout class="QGridLayout" >
+              <item row="0" column="0" >
+               <widget class="QLabel" name="mirrorLabel" >
+                <property name="text" >
+                 <string>Mirror:</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1" >
+               <widget class="QComboBox" name="mirrorBox" />
+              </item>
+              <item row="2" column="1" >
+               <layout class="QHBoxLayout" >
+                <item>
+                 <widget class="QLineEdit" name="addMirrorLine" />
+                </item>
+                <item>
+                 <widget class="QPushButton" name="addMirrorButton" >
+                  <property name="text" >
+                   <string>Add Mirror</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+             </layout>
+            </widget>
            </item>
           </layout>
          </widget>
