--- a/trunk/ui/qtpacman.qrc
+++ b/trunk/ui/qtpacman.qrc
@@ -13,6 +13,7 @@
         <file>icons/list-remove.png</file>
         <file>icons/network-server-database.png</file>
         <file>icons/preferences-system.png</file>
+        <file>icons/view-history.png</file>
         <file>icons/view-refresh.png</file>
     </qresource>
 </RCC>
