--- a/trunk/ui/reviewQueueDialog.ui
+++ b/trunk/ui/reviewQueueDialog.ui
@@ -18,11 +18,7 @@
      <item>
       <widget class="QLabel" name="queueInfo" >
        <property name="text" >
-        <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Your Queue is about to be processed. You are going to:&lt;br />Remove &lt;span style=" font-weight:600;">%1 packages&lt;/span>&lt;br />Install/Upgrade &lt;span style=" font-weight:600;">%2 packages&lt;/span>&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-weight:600;">&lt;span style=" font-weight:400;">Do you wish to continue?&lt;/span>&lt;/p>&lt;/body>&lt;/html></string>
+        <string/>
        </property>
       </widget>
      </item>
