--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -124,6 +124,9 @@
              </property>
             </widget>
            </item>
+	   <item>
+	    <widget class="QComboBox" name="nameDescBox" />
+	   </item>
           </layout>
          </item>
          <item>
@@ -293,7 +296,13 @@
             </attribute>
             <layout class="QGridLayout" >
              <item row="0" column="0" >
-              <widget class="QTreeWidget" name="filesWidget" />
+              <widget class="QTreeWidget" name="filesWidget" >
+               <column>
+                <property name="text" >
+                 <string>1</string>
+                </property>
+               </column>
+              </widget>
              </item>
             </layout>
            </widget>
