--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -66,6 +66,19 @@
          </widget>
         </item>
         <item>
+         <spacer>
+          <property name="orientation" >
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" >
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
          <widget class="QLineEdit" name="searchLine" >
           <property name="sizePolicy" >
            <sizepolicy vsizetype="Fixed" hsizetype="MinimumExpanding" >
@@ -74,6 +87,9 @@
            </sizepolicy>
           </property>
           <property name="inputMask" >
+           <string/>
+          </property>
+          <property name="text" >
            <string/>
           </property>
          </widget>
