--- a/trunk/ui/buildingDialog.ui
+++ b/trunk/ui/buildingDialog.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog" >
+ <class>buildingDialog</class>
+ <widget class="QDialog" name="buildingDialog" >
   <property name="geometry" >
    <rect>
     <x>0</x>
