It's coming... can you feel it?

--- a/trunk/ui/reviewBuildingDialog.ui
+++ b/trunk/ui/reviewBuildingDialog.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog" >
+ <class>reviewBuildingDialog</class>
+ <widget class="QDialog" name="reviewBuildingDialog" >
   <property name="geometry" >
    <rect>
     <x>0</x>
