Action columns is icon only from now

--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -154,6 +154,11 @@
           <string>Description</string>
          </property>
         </column>
+        <column>
+         <property name="text" >
+          <string>Action-Text</string>
+         </property>
+        </column>
        </widget>
       </item>
      </layout>
@@ -426,7 +431,7 @@
      <x>0</x>
      <y>0</y>
      <width>1195</width>
-     <height>25</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile" >
