--- a/trunk/ui/reviewQueueDialog.ui
+++ b/trunk/ui/reviewQueueDialog.ui
@@ -77,6 +77,12 @@
    </item>
    <item row="0" column="0" >
     <widget class="QFrame" name="frame" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Maximum" hsizetype="Preferred" >
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="frameShape" >
       <enum>QFrame::StyledPanel</enum>
      </property>
