--- a/trunk/ui/qtpacman.qrc
+++ b/trunk/ui/qtpacman.qrc
@@ -6,6 +6,7 @@
         <file>icons/dialog-ok-apply.png</file>
         <file>icons/document-open-folder.png</file>
         <file>icons/document-open.png</file>
+        <file>icons/draw-text.png</file>
         <file>icons/edit-delete.png</file>
         <file>icons/edit-redo.png</file>
         <file>icons/help-about.png</file>
