--- a/trunk/ui/transactionDialog.ui
+++ b/trunk/ui/transactionDialog.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>331</width>
-    <height>278</height>
+    <height>284</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -176,7 +176,7 @@
    <item row="0" column="0" >
     <widget class="QFrame" name="frame" >
      <property name="sizePolicy" >
-      <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
+      <sizepolicy vsizetype="Maximum" hsizetype="Minimum" >
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -207,6 +207,12 @@ p, li { white-space: pre-wrap; }
          </sizepolicy>
         </property>
         <property name="minimumSize" >
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
+        <property name="maximumSize" >
          <size>
           <width>32</width>
           <height>32</height>
