--- a/trunk/ui/transactionDialog.ui
+++ b/trunk/ui/transactionDialog.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>331</width>
-    <height>284</height>
+    <width>370</width>
+    <height>389</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -133,6 +133,12 @@
        <property name="text" >
         <string>More Details...</string>
        </property>
+       <property name="checkable" >
+        <bool>true</bool>
+       </property>
+       <property name="checked" >
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item>
@@ -232,10 +238,34 @@ p, li { white-space: pre-wrap; }
      </layout>
     </widget>
    </item>
+   <item row="6" column="0" >
+    <widget class="QTextEdit" name="textEdit" >
+     <property name="enabled" >
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources>
   <include location="qtpacman.qrc" />
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>showDetails</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>textEdit</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>71</x>
+     <y>227</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>184</x>
+     <y>316</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
