--- a/trunk/ui/reviewBuildingDialog.ui
+++ b/trunk/ui/reviewBuildingDialog.ui
@@ -10,7 +10,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Dialog</string>
+   <string>Review Building Queue</string>
   </property>
   <layout class="QGridLayout" >
    <item row="0" column="0" >
@@ -126,7 +126,7 @@ p, li { white-space: pre-wrap; }
       <widget class="QTreeWidget" name="treeWidget" >
        <column>
         <property name="text" >
-         <string>1</string>
+         <string>Packages In Queue</string>
         </property>
        </column>
       </widget>
