--- a/trunk/ui/reviewBuildingDialog.ui
+++ b/trunk/ui/reviewBuildingDialog.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>622</width>
-    <height>237</height>
+    <height>257</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -72,6 +72,16 @@ p, li { white-space: pre-wrap; }
       <widget class="QLabel" name="infoLabel" >
        <property name="text" >
         <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="depsWizardBox" >
+       <property name="text" >
+        <string>Process All Dependencies from Binary First (advised)</string>
+       </property>
+       <property name="checked" >
+        <bool>true</bool>
        </property>
       </widget>
      </item>
