--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -33,7 +33,7 @@
         <item>
          <widget class="QComboBox" name="packageSwitchCombo" >
           <property name="sizePolicy" >
-           <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
+           <sizepolicy vsizetype="Maximum" hsizetype="Maximum" >
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -81,7 +81,7 @@
         <item>
          <widget class="QLineEdit" name="searchLine" >
           <property name="sizePolicy" >
-           <sizepolicy vsizetype="Fixed" hsizetype="MinimumExpanding" >
+           <sizepolicy vsizetype="Maximum" hsizetype="MinimumExpanding" >
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -95,7 +95,14 @@
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="nameDescBox" />
+         <widget class="QComboBox" name="nameDescBox" >
+          <property name="sizePolicy" >
+           <sizepolicy vsizetype="Maximum" hsizetype="Preferred" >
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -597,6 +604,8 @@
    </property>
   </action>
  </widget>
+ <layoutdefault spacing="0" margin="0" />
+ <includes/>
  <resources>
   <include location="qtpacman.qrc" />
  </resources>
