--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -359,6 +359,22 @@
               </property>
              </widget>
             </item>
+            <item>
+             <spacer>
+              <property name="orientation" >
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType" >
+               <enum>QSizePolicy::MinimumExpanding</enum>
+              </property>
+              <property name="sizeHint" >
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
            </layout>
           </item>
           <item>
@@ -605,7 +621,6 @@
   </action>
  </widget>
  <layoutdefault spacing="0" margin="0" />
- <includes/>
  <resources>
   <include location="qtpacman.qrc" />
  </resources>
